// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`golden-master: area chart golden-master: area chart axes count 1`] = `42`;

exports[`golden-master: area chart golden-master: area chart legends count 1`] = `5`;

exports[`golden-master: area chart golden-master: area chart marks 1`] = `
[
  {
    "datum": [
      {
        "category": "A",
        "series": "S1",
        "value": 10,
      },
      {
        "category": "B",
        "series": "S1",
        "value": 20,
      },
      {
        "category": "C",
        "series": "S1",
        "value": 30,
      },
    ],
    "path": "M101.003861003861,320 L101.003861003861,220 L211.04247104247105,120 L321.0810810810811,20 L321.0810810810811,320 Z",
    "style": {
      "fill": "#1f77b4",
      "opacity": 0.7,
      "stroke": "#1f77b4",
      "strokeWidth": 1,
    },
    "type": "path",
    "x": 0,
    "y": 0,
  },
  {
    "datum": [
      {
        "category": "A",
        "series": "S2",
        "value": 15,
      },
      {
        "category": "B",
        "series": "S2",
        "value": 25,
      },
      {
        "category": "C",
        "series": "S2",
        "value": 5,
      },
    ],
    "path": "M101.003861003861,320 L101.003861003861,170 L211.04247104247105,70 L321.0810810810811,270 L321.0810810810811,320 Z",
    "style": {
      "fill": "#ff7f0e",
      "opacity": 0.7,
      "stroke": "#ff7f0e",
      "strokeWidth": 1,
    },
    "type": "path",
    "x": 0,
    "y": 0,
  },
]
`;

exports[`golden-master: area chart golden-master: area chart marks count 1`] = `2`;

exports[`golden-master: bar chart golden-master: bar chart axes count 1`] = `42`;

exports[`golden-master: bar chart golden-master: bar chart legends count 1`] = `5`;

exports[`golden-master: bar chart golden-master: bar chart marks 1`] = `
[
  {
    "datum": {
      "category": "A",
      "series": "S1",
      "value": 10,
    },
    "height": 100,
    "style": {
      "cornerRadius": undefined,
      "fill": "#1f77b4",
      "opacity": 1,
      "stroke": undefined,
      "strokeWidth": undefined,
    },
    "type": "rect",
    "width": 55.88235294117647,
    "x": 101.003861003861,
    "y": 220,
  },
  {
    "datum": {
      "category": "B",
      "series": "S1",
      "value": 20,
    },
    "height": 200,
    "style": {
      "cornerRadius": undefined,
      "fill": "#1f77b4",
      "opacity": 1,
      "stroke": undefined,
      "strokeWidth": undefined,
    },
    "type": "rect",
    "width": 55.88235294117647,
    "x": 211.04247104247105,
    "y": 120,
  },
  {
    "datum": {
      "category": "C",
      "series": "S1",
      "value": 30,
    },
    "height": 300,
    "style": {
      "cornerRadius": undefined,
      "fill": "#1f77b4",
      "opacity": 1,
      "stroke": undefined,
      "strokeWidth": undefined,
    },
    "type": "rect",
    "width": 55.88235294117647,
    "x": 321.0810810810811,
    "y": 20,
  },
  {
    "datum": {
      "category": "A",
      "series": "S2",
      "value": 15,
    },
    "height": 150,
    "style": {
      "cornerRadius": undefined,
      "fill": "#ff7f0e",
      "opacity": 1,
      "stroke": undefined,
      "strokeWidth": undefined,
    },
    "type": "rect",
    "width": 55.88235294117647,
    "x": 156.88621394503747,
    "y": 170,
  },
  {
    "datum": {
      "category": "B",
      "series": "S2",
      "value": 25,
    },
    "height": 250,
    "style": {
      "cornerRadius": undefined,
      "fill": "#ff7f0e",
      "opacity": 1,
      "stroke": undefined,
      "strokeWidth": undefined,
    },
    "type": "rect",
    "width": 55.88235294117647,
    "x": 266.9248239836475,
    "y": 70,
  },
  {
    "datum": {
      "category": "C",
      "series": "S2",
      "value": 5,
    },
    "height": 50,
    "style": {
      "cornerRadius": undefined,
      "fill": "#ff7f0e",
      "opacity": 1,
      "stroke": undefined,
      "strokeWidth": undefined,
    },
    "type": "rect",
    "width": 55.88235294117647,
    "x": 376.96343402225756,
    "y": 270,
  },
]
`;

exports[`golden-master: bar chart golden-master: bar chart marks count 1`] = `6`;

exports[`golden-master: bubble chart golden-master: bubble chart axes count 1`] = `44`;

exports[`golden-master: bubble chart golden-master: bubble chart legends count 1`] = `5`;

exports[`golden-master: bubble chart golden-master: bubble chart marks 1`] = `
[
  {
    "datum": {
      "group": "G1",
      "size": 5,
      "x": 1,
      "y": 10,
    },
    "shape": "circle",
    "size": 166.66666666666669,
    "style": {
      "fill": "#1f77b4",
      "opacity": 1,
      "stroke": undefined,
      "strokeWidth": 1,
    },
    "type": "symbol",
    "x": 90,
    "y": 320,
  },
  {
    "datum": {
      "group": "G1",
      "size": 10,
      "x": 2,
      "y": 20,
    },
    "shape": "circle",
    "size": 333.33333333333337,
    "style": {
      "fill": "#1f77b4",
      "opacity": 1,
      "stroke": undefined,
      "strokeWidth": 1,
    },
    "type": "symbol",
    "x": 185,
    "y": 170,
  },
  {
    "datum": {
      "group": "G2",
      "size": 8,
      "x": 3,
      "y": 15,
    },
    "shape": "circle",
    "size": 266.6666666666667,
    "style": {
      "fill": "#ff7f0e",
      "opacity": 1,
      "stroke": undefined,
      "strokeWidth": 1,
    },
    "type": "symbol",
    "x": 280,
    "y": 245,
  },
  {
    "datum": {
      "group": "G2",
      "size": 12,
      "x": 4,
      "y": 25,
    },
    "shape": "circle",
    "size": 400,
    "style": {
      "fill": "#ff7f0e",
      "opacity": 1,
      "stroke": undefined,
      "strokeWidth": 1,
    },
    "type": "symbol",
    "x": 375,
    "y": 95,
  },
  {
    "datum": {
      "group": "G1",
      "size": 6,
      "x": 5,
      "y": 30,
    },
    "shape": "circle",
    "size": 200,
    "style": {
      "fill": "#1f77b4",
      "opacity": 1,
      "stroke": undefined,
      "strokeWidth": 1,
    },
    "type": "symbol",
    "x": 470,
    "y": 20,
  },
]
`;

exports[`golden-master: bubble chart golden-master: bubble chart marks count 1`] = `5`;

exports[`golden-master: column chart (horizontal bar) golden-master: column chart axes count 1`] = `42`;

exports[`golden-master: column chart (horizontal bar) golden-master: column chart legends count 1`] = `5`;

exports[`golden-master: column chart (horizontal bar) golden-master: column chart marks 1`] = `
[
  {
    "datum": {
      "category": "A",
      "series": "S1",
      "value": 10,
    },
    "height": 44.11764705882353,
    "style": {
      "cornerRadius": undefined,
      "fill": "#1f77b4",
      "opacity": 1,
      "stroke": undefined,
      "strokeWidth": undefined,
    },
    "type": "rect",
    "width": 126.66666666666666,
    "x": 90,
    "y": 28.68725868725869,
  },
  {
    "datum": {
      "category": "B",
      "series": "S1",
      "value": 20,
    },
    "height": 44.11764705882353,
    "style": {
      "cornerRadius": undefined,
      "fill": "#1f77b4",
      "opacity": 1,
      "stroke": undefined,
      "strokeWidth": undefined,
    },
    "type": "rect",
    "width": 253.33333333333331,
    "x": 90,
    "y": 115.55984555984557,
  },
  {
    "datum": {
      "category": "C",
      "series": "S1",
      "value": 30,
    },
    "height": 44.11764705882353,
    "style": {
      "cornerRadius": undefined,
      "fill": "#1f77b4",
      "opacity": 1,
      "stroke": undefined,
      "strokeWidth": undefined,
    },
    "type": "rect",
    "width": 380,
    "x": 90,
    "y": 202.43243243243245,
  },
  {
    "datum": {
      "category": "A",
      "series": "S2",
      "value": 15,
    },
    "height": 44.11764705882353,
    "style": {
      "cornerRadius": undefined,
      "fill": "#ff7f0e",
      "opacity": 1,
      "stroke": undefined,
      "strokeWidth": undefined,
    },
    "type": "rect",
    "width": 190,
    "x": 90,
    "y": 72.80490574608223,
  },
  {
    "datum": {
      "category": "B",
      "series": "S2",
      "value": 25,
    },
    "height": 44.11764705882353,
    "style": {
      "cornerRadius": undefined,
      "fill": "#ff7f0e",
      "opacity": 1,
      "stroke": undefined,
      "strokeWidth": undefined,
    },
    "type": "rect",
    "width": 316.66666666666663,
    "x": 90,
    "y": 159.6774926186691,
  },
  {
    "datum": {
      "category": "C",
      "series": "S2",
      "value": 5,
    },
    "height": 44.11764705882353,
    "style": {
      "cornerRadius": undefined,
      "fill": "#ff7f0e",
      "opacity": 1,
      "stroke": undefined,
      "strokeWidth": undefined,
    },
    "type": "rect",
    "width": 63.333333333333314,
    "x": 90,
    "y": 246.55007949125599,
  },
]
`;

exports[`golden-master: column chart (horizontal bar) golden-master: column chart marks count 1`] = `6`;

exports[`golden-master: combo chart golden-master: combo chart axes count 1`] = `42`;

exports[`golden-master: combo chart golden-master: combo chart legends count 1`] = `0`;

exports[`golden-master: combo chart golden-master: combo chart marks 1`] = `
[
  {
    "datum": {
      "category": "A",
      "series": "S1",
      "value": 10,
    },
    "height": 113.33333333333334,
    "style": {
      "cornerRadius": undefined,
      "fill": "#1f77b4",
      "opacity": 1,
      "stroke": undefined,
      "strokeWidth": undefined,
    },
    "type": "rect",
    "width": 77.94117647058823,
    "x": 65.34749034749035,
    "y": 246.66666666666666,
  },
  {
    "datum": {
      "category": "A",
      "series": "S2",
      "value": 15,
    },
    "height": 170,
    "style": {
      "cornerRadius": undefined,
      "fill": "#d62728",
      "opacity": 1,
      "stroke": undefined,
      "strokeWidth": undefined,
    },
    "type": "rect",
    "width": 77.94117647058823,
    "x": 143.28866681807858,
    "y": 190,
  },
  {
    "datum": {
      "category": "B",
      "series": "S1",
      "value": 20,
    },
    "height": 226.66666666666669,
    "style": {
      "cornerRadius": undefined,
      "fill": "#ff7f0e",
      "opacity": 1,
      "stroke": undefined,
      "strokeWidth": undefined,
    },
    "type": "rect",
    "width": 77.94117647058823,
    "x": 218.82239382239382,
    "y": 133.33333333333331,
  },
  {
    "datum": {
      "category": "B",
      "series": "S2",
      "value": 25,
    },
    "height": 283.33333333333337,
    "style": {
      "cornerRadius": undefined,
      "fill": "#9467bd",
      "opacity": 1,
      "stroke": undefined,
      "strokeWidth": undefined,
    },
    "type": "rect",
    "width": 77.94117647058823,
    "x": 296.7635702929821,
    "y": 76.66666666666663,
  },
  {
    "datum": {
      "category": "C",
      "series": "S1",
      "value": 30,
    },
    "height": 340,
    "style": {
      "cornerRadius": undefined,
      "fill": "#2ca02c",
      "opacity": 1,
      "stroke": undefined,
      "strokeWidth": undefined,
    },
    "type": "rect",
    "width": 77.94117647058823,
    "x": 372.2972972972973,
    "y": 20,
  },
  {
    "datum": {
      "category": "C",
      "series": "S2",
      "value": 5,
    },
    "height": 56.666666666666686,
    "style": {
      "cornerRadius": undefined,
      "fill": "#8c564b",
      "opacity": 1,
      "stroke": undefined,
      "strokeWidth": undefined,
    },
    "type": "rect",
    "width": 77.94117647058823,
    "x": 450.2384737678855,
    "y": 303.3333333333333,
  },
  {
    "datum": [
      {
        "category": "A",
        "series": "S1",
        "value": 10,
      },
      {
        "category": "B",
        "series": "S1",
        "value": 20,
      },
      {
        "category": "C",
        "series": "S1",
        "value": 30,
      },
      {
        "category": "A",
        "series": "S2",
        "value": 15,
      },
      {
        "category": "B",
        "series": "S2",
        "value": 25,
      },
      {
        "category": "C",
        "series": "S2",
        "value": 5,
      },
    ],
    "path": "M65.34749034749035,246.66666666666666 L65.34749034749035,190 L218.82239382239382,133.33333333333331 L218.82239382239382,76.66666666666663 L372.2972972972973,20 L372.2972972972973,303.3333333333333",
    "style": {
      "fill": undefined,
      "opacity": 1,
      "stroke": "#1f77b4",
      "strokeWidth": 2,
    },
    "type": "path",
    "x": 0,
    "y": 0,
  },
]
`;

exports[`golden-master: combo chart golden-master: combo chart marks count 1`] = `7`;

exports[`golden-master: doughnut chart golden-master: doughnut chart axes count 1`] = `0`;

exports[`golden-master: doughnut chart golden-master: doughnut chart legends count 1`] = `7`;

exports[`golden-master: doughnut chart golden-master: doughnut chart marks 1`] = `
[
  {
    "datum": {
      "category": "A",
      "series": "S1",
      "value": 10,
    },
    "endAngle": -0.9773977261111265,
    "innerRadius": 80,
    "outerRadius": 160,
    "startAngle": -1.5657963267948967,
    "style": {
      "fill": "#1f77b4",
      "opacity": 1,
      "stroke": "#fff",
      "strokeWidth": 1,
    },
    "type": "arc",
    "x": 260,
    "y": 190,
  },
  {
    "datum": {
      "category": "B",
      "series": "S1",
      "value": 20,
    },
    "endAngle": 0.21939947525641357,
    "innerRadius": 80,
    "outerRadius": 160,
    "startAngle": -0.9673977261111265,
    "style": {
      "fill": "#ff7f0e",
      "opacity": 1,
      "stroke": "#fff",
      "strokeWidth": 1,
    },
    "type": "arc",
    "x": 260,
    "y": 190,
  },
  {
    "datum": {
      "category": "C",
      "series": "S1",
      "value": 30,
    },
    "endAngle": 2.0145952773077243,
    "innerRadius": 80,
    "outerRadius": 160,
    "startAngle": 0.22939947525641358,
    "style": {
      "fill": "#2ca02c",
      "opacity": 1,
      "stroke": "#fff",
      "strokeWidth": 1,
    },
    "type": "arc",
    "x": 260,
    "y": 190,
  },
  {
    "datum": {
      "category": "A",
      "series": "S2",
      "value": 15,
    },
    "endAngle": 2.9121931783333794,
    "innerRadius": 80,
    "outerRadius": 160,
    "startAngle": 2.024595277307724,
    "style": {
      "fill": "#1f77b4",
      "opacity": 1,
      "stroke": "#fff",
      "strokeWidth": 1,
    },
    "type": "arc",
    "x": 260,
    "y": 190,
  },
  {
    "datum": {
      "category": "B",
      "series": "S2",
      "value": 25,
    },
    "endAngle": 4.408189680042804,
    "innerRadius": 80,
    "outerRadius": 160,
    "startAngle": 2.922193178333379,
    "style": {
      "fill": "#ff7f0e",
      "opacity": 1,
      "stroke": "#fff",
      "strokeWidth": 1,
    },
    "type": "arc",
    "x": 260,
    "y": 190,
  },
  {
    "datum": {
      "category": "C",
      "series": "S2",
      "value": 5,
    },
    "endAngle": 4.70738898038469,
    "innerRadius": 80,
    "outerRadius": 160,
    "startAngle": 4.418189680042804,
    "style": {
      "fill": "#2ca02c",
      "opacity": 1,
      "stroke": "#fff",
      "strokeWidth": 1,
    },
    "type": "arc",
    "x": 260,
    "y": 190,
  },
]
`;

exports[`golden-master: doughnut chart golden-master: doughnut chart marks count 1`] = `6`;

exports[`golden-master: funnel chart golden-master: funnel chart axes count 1`] = `34`;

exports[`golden-master: funnel chart golden-master: funnel chart legends count 1`] = `0`;

exports[`golden-master: funnel chart golden-master: funnel chart marks 1`] = `
[
  {
    "datum": {
      "count": 1000,
      "stage": "Visitors",
    },
    "height": 66.66666666666666,
    "style": {
      "cornerRadius": undefined,
      "fill": "#1f77b4",
      "opacity": 1,
      "stroke": undefined,
      "strokeWidth": undefined,
    },
    "type": "rect",
    "width": 490,
    "x": 90,
    "y": 26.575342465753426,
  },
  {
    "datum": {
      "count": 600,
      "stage": "Signups",
    },
    "height": 66.66666666666666,
    "style": {
      "cornerRadius": undefined,
      "fill": "#ff7f0e",
      "opacity": 1,
      "stroke": undefined,
      "strokeWidth": undefined,
    },
    "type": "rect",
    "width": 294,
    "x": 90,
    "y": 92.32876712328768,
  },
  {
    "datum": {
      "count": 300,
      "stage": "Trial",
    },
    "height": 66.66666666666666,
    "style": {
      "cornerRadius": undefined,
      "fill": "#2ca02c",
      "opacity": 1,
      "stroke": undefined,
      "strokeWidth": undefined,
    },
    "type": "rect",
    "width": 147,
    "x": 90,
    "y": 158.08219178082194,
  },
  {
    "datum": {
      "count": 100,
      "stage": "Paid",
    },
    "height": 66.66666666666666,
    "style": {
      "cornerRadius": undefined,
      "fill": "#d62728",
      "opacity": 1,
      "stroke": undefined,
      "strokeWidth": undefined,
    },
    "type": "rect",
    "width": 49,
    "x": 90,
    "y": 223.8356164383562,
  },
]
`;

exports[`golden-master: funnel chart golden-master: funnel chart marks count 1`] = `4`;

exports[`golden-master: line chart golden-master: line chart axes count 1`] = `38`;

exports[`golden-master: line chart golden-master: line chart legends count 1`] = `5`;

exports[`golden-master: line chart golden-master: line chart marks 1`] = `
[
  {
    "datum": [
      {
        "category": "A",
        "series": "S1",
        "value": 10,
      },
      {
        "category": "B",
        "series": "S1",
        "value": 20,
      },
      {
        "category": "C",
        "series": "S1",
        "value": 30,
      },
    ],
    "path": "M101.003861003861,250.76923076923075 L211.04247104247105,135.38461538461536 L321.0810810810811,20",
    "style": {
      "fill": undefined,
      "opacity": 1,
      "stroke": "#1f77b4",
      "strokeWidth": 2,
    },
    "type": "path",
    "x": 0,
    "y": 0,
  },
  {
    "datum": [
      {
        "category": "A",
        "series": "S2",
        "value": 15,
      },
      {
        "category": "B",
        "series": "S2",
        "value": 25,
      },
      {
        "category": "C",
        "series": "S2",
        "value": 5,
      },
    ],
    "path": "M101.003861003861,193.07692307692307 L211.04247104247105,77.69230769230768 L321.0810810810811,308.46153846153845",
    "style": {
      "fill": undefined,
      "opacity": 1,
      "stroke": "#ff7f0e",
      "strokeWidth": 2,
    },
    "type": "path",
    "x": 0,
    "y": 0,
  },
]
`;

exports[`golden-master: line chart golden-master: line chart marks count 1`] = `2`;

exports[`golden-master: percent-stacked bar chart golden-master: percent-stacked bar chart axes count 1`] = `42`;

exports[`golden-master: percent-stacked bar chart golden-master: percent-stacked bar chart legends count 1`] = `5`;

exports[`golden-master: percent-stacked bar chart golden-master: percent-stacked bar chart marks 1`] = `
[
  {
    "datum": {
      "category": "A",
      "series": "S1",
      "value": 10,
    },
    "height": 120,
    "style": {
      "cornerRadius": undefined,
      "fill": "#1f77b4",
      "opacity": 1,
      "stroke": undefined,
      "strokeWidth": undefined,
    },
    "type": "rect",
    "width": 111.76470588235294,
    "x": 101.003861003861,
    "y": 200,
  },
  {
    "datum": {
      "category": "B",
      "series": "S1",
      "value": 20,
    },
    "height": 133.33333333333331,
    "style": {
      "cornerRadius": undefined,
      "fill": "#1f77b4",
      "opacity": 1,
      "stroke": undefined,
      "strokeWidth": undefined,
    },
    "type": "rect",
    "width": 111.76470588235294,
    "x": 211.04247104247105,
    "y": 186.66666666666669,
  },
  {
    "datum": {
      "category": "C",
      "series": "S1",
      "value": 30,
    },
    "height": 257.1428571428571,
    "style": {
      "cornerRadius": undefined,
      "fill": "#1f77b4",
      "opacity": 1,
      "stroke": undefined,
      "strokeWidth": undefined,
    },
    "type": "rect",
    "width": 111.76470588235294,
    "x": 321.0810810810811,
    "y": 62.85714285714289,
  },
  {
    "datum": {
      "category": "A",
      "series": "S2",
      "value": 15,
    },
    "height": 180,
    "style": {
      "cornerRadius": undefined,
      "fill": "#ff7f0e",
      "opacity": 1,
      "stroke": undefined,
      "strokeWidth": undefined,
    },
    "type": "rect",
    "width": 111.76470588235294,
    "x": 101.003861003861,
    "y": 20,
  },
  {
    "datum": {
      "category": "B",
      "series": "S2",
      "value": 25,
    },
    "height": 166.66666666666669,
    "style": {
      "cornerRadius": undefined,
      "fill": "#ff7f0e",
      "opacity": 1,
      "stroke": undefined,
      "strokeWidth": undefined,
    },
    "type": "rect",
    "width": 111.76470588235294,
    "x": 211.04247104247105,
    "y": 20,
  },
  {
    "datum": {
      "category": "C",
      "series": "S2",
      "value": 5,
    },
    "height": 42.85714285714289,
    "style": {
      "cornerRadius": undefined,
      "fill": "#ff7f0e",
      "opacity": 1,
      "stroke": undefined,
      "strokeWidth": undefined,
    },
    "type": "rect",
    "width": 111.76470588235294,
    "x": 321.0810810810811,
    "y": 20,
  },
]
`;

exports[`golden-master: percent-stacked bar chart golden-master: percent-stacked bar chart marks count 1`] = `6`;

exports[`golden-master: pie chart golden-master: pie chart axes count 1`] = `0`;

exports[`golden-master: pie chart golden-master: pie chart legends count 1`] = `7`;

exports[`golden-master: pie chart golden-master: pie chart marks 1`] = `
[
  {
    "datum": {
      "category": "A",
      "series": "S1",
      "value": 10,
    },
    "endAngle": -0.9773977261111265,
    "innerRadius": 0,
    "outerRadius": 160,
    "startAngle": -1.5657963267948967,
    "style": {
      "fill": "#1f77b4",
      "opacity": 1,
      "stroke": "#fff",
      "strokeWidth": 1,
    },
    "type": "arc",
    "x": 260,
    "y": 190,
  },
  {
    "datum": {
      "category": "B",
      "series": "S1",
      "value": 20,
    },
    "endAngle": 0.21939947525641357,
    "innerRadius": 0,
    "outerRadius": 160,
    "startAngle": -0.9673977261111265,
    "style": {
      "fill": "#ff7f0e",
      "opacity": 1,
      "stroke": "#fff",
      "strokeWidth": 1,
    },
    "type": "arc",
    "x": 260,
    "y": 190,
  },
  {
    "datum": {
      "category": "C",
      "series": "S1",
      "value": 30,
    },
    "endAngle": 2.0145952773077243,
    "innerRadius": 0,
    "outerRadius": 160,
    "startAngle": 0.22939947525641358,
    "style": {
      "fill": "#2ca02c",
      "opacity": 1,
      "stroke": "#fff",
      "strokeWidth": 1,
    },
    "type": "arc",
    "x": 260,
    "y": 190,
  },
  {
    "datum": {
      "category": "A",
      "series": "S2",
      "value": 15,
    },
    "endAngle": 2.9121931783333794,
    "innerRadius": 0,
    "outerRadius": 160,
    "startAngle": 2.024595277307724,
    "style": {
      "fill": "#1f77b4",
      "opacity": 1,
      "stroke": "#fff",
      "strokeWidth": 1,
    },
    "type": "arc",
    "x": 260,
    "y": 190,
  },
  {
    "datum": {
      "category": "B",
      "series": "S2",
      "value": 25,
    },
    "endAngle": 4.408189680042804,
    "innerRadius": 0,
    "outerRadius": 160,
    "startAngle": 2.922193178333379,
    "style": {
      "fill": "#ff7f0e",
      "opacity": 1,
      "stroke": "#fff",
      "strokeWidth": 1,
    },
    "type": "arc",
    "x": 260,
    "y": 190,
  },
  {
    "datum": {
      "category": "C",
      "series": "S2",
      "value": 5,
    },
    "endAngle": 4.70738898038469,
    "innerRadius": 0,
    "outerRadius": 160,
    "startAngle": 4.418189680042804,
    "style": {
      "fill": "#2ca02c",
      "opacity": 1,
      "stroke": "#fff",
      "strokeWidth": 1,
    },
    "type": "arc",
    "x": 260,
    "y": 190,
  },
]
`;

exports[`golden-master: pie chart golden-master: pie chart marks count 1`] = `6`;

exports[`golden-master: radar chart golden-master: radar chart axes count 1`] = `38`;

exports[`golden-master: radar chart golden-master: radar chart legends count 1`] = `5`;

exports[`golden-master: radar chart golden-master: radar chart marks 1`] = `
[
  {
    "datum": [
      {
        "category": "A",
        "series": "S1",
        "value": 10,
      },
      {
        "category": "B",
        "series": "S1",
        "value": 20,
      },
      {
        "category": "C",
        "series": "S1",
        "value": 30,
      },
    ],
    "path": "M101.003861003861,250.76923076923075 L211.04247104247105,135.38461538461536 L321.0810810810811,20",
    "style": {
      "fill": undefined,
      "opacity": 1,
      "stroke": "#1f77b4",
      "strokeWidth": 2,
    },
    "type": "path",
    "x": 0,
    "y": 0,
  },
  {
    "datum": [
      {
        "category": "A",
        "series": "S2",
        "value": 15,
      },
      {
        "category": "B",
        "series": "S2",
        "value": 25,
      },
      {
        "category": "C",
        "series": "S2",
        "value": 5,
      },
    ],
    "path": "M101.003861003861,193.07692307692307 L211.04247104247105,77.69230769230768 L321.0810810810811,308.46153846153845",
    "style": {
      "fill": undefined,
      "opacity": 1,
      "stroke": "#ff7f0e",
      "strokeWidth": 2,
    },
    "type": "path",
    "x": 0,
    "y": 0,
  },
]
`;

exports[`golden-master: radar chart golden-master: radar chart marks count 1`] = `2`;

exports[`golden-master: scatter chart golden-master: scatter chart axes count 1`] = `44`;

exports[`golden-master: scatter chart golden-master: scatter chart legends count 1`] = `0`;

exports[`golden-master: scatter chart golden-master: scatter chart marks 1`] = `
[
  {
    "datum": {
      "group": "G1",
      "size": 5,
      "x": 1,
      "y": 10,
    },
    "shape": "circle",
    "size": 64,
    "style": {
      "fill": "#1f77b4",
      "opacity": 1,
      "stroke": undefined,
      "strokeWidth": 1,
    },
    "type": "symbol",
    "x": 90,
    "y": 320,
  },
  {
    "datum": {
      "group": "G1",
      "size": 10,
      "x": 2,
      "y": 20,
    },
    "shape": "circle",
    "size": 64,
    "style": {
      "fill": "#1f77b4",
      "opacity": 1,
      "stroke": undefined,
      "strokeWidth": 1,
    },
    "type": "symbol",
    "x": 212.5,
    "y": 170,
  },
  {
    "datum": {
      "group": "G2",
      "size": 8,
      "x": 3,
      "y": 15,
    },
    "shape": "circle",
    "size": 64,
    "style": {
      "fill": "#1f77b4",
      "opacity": 1,
      "stroke": undefined,
      "strokeWidth": 1,
    },
    "type": "symbol",
    "x": 335,
    "y": 245,
  },
  {
    "datum": {
      "group": "G2",
      "size": 12,
      "x": 4,
      "y": 25,
    },
    "shape": "circle",
    "size": 64,
    "style": {
      "fill": "#1f77b4",
      "opacity": 1,
      "stroke": undefined,
      "strokeWidth": 1,
    },
    "type": "symbol",
    "x": 457.5,
    "y": 95,
  },
  {
    "datum": {
      "group": "G1",
      "size": 6,
      "x": 5,
      "y": 30,
    },
    "shape": "circle",
    "size": 64,
    "style": {
      "fill": "#1f77b4",
      "opacity": 1,
      "stroke": undefined,
      "strokeWidth": 1,
    },
    "type": "symbol",
    "x": 580,
    "y": 20,
  },
]
`;

exports[`golden-master: scatter chart golden-master: scatter chart marks count 1`] = `5`;

exports[`golden-master: stacked area chart golden-master: stacked area chart axes count 1`] = `42`;

exports[`golden-master: stacked area chart golden-master: stacked area chart legends count 1`] = `5`;

exports[`golden-master: stacked area chart golden-master: stacked area chart marks 1`] = `
[
  {
    "datum": [
      {
        "category": "A",
        "series": "S1",
        "value": 10,
      },
      {
        "category": "B",
        "series": "S1",
        "value": 20,
      },
      {
        "category": "C",
        "series": "S1",
        "value": 30,
      },
    ],
    "path": "M101.003861003861,253.33333333333334 L211.04247104247105,186.66666666666669 L321.0810810810811,120 L321.0810810810811,320 L211.04247104247105,320 L101.003861003861,320 Z",
    "style": {
      "fill": "#1f77b4",
      "opacity": 0.7,
      "stroke": "#1f77b4",
      "strokeWidth": 1,
    },
    "type": "path",
    "x": 0,
    "y": 0,
  },
  {
    "datum": [
      {
        "category": "A",
        "series": "S2",
        "value": 15,
      },
      {
        "category": "B",
        "series": "S2",
        "value": 25,
      },
      {
        "category": "C",
        "series": "S2",
        "value": 5,
      },
    ],
    "path": "M101.003861003861,153.33333333333331 L211.04247104247105,20 L321.0810810810811,86.66666666666666 L321.0810810810811,120 L211.04247104247105,186.66666666666669 L101.003861003861,253.33333333333334 Z",
    "style": {
      "fill": "#ff7f0e",
      "opacity": 0.7,
      "stroke": "#ff7f0e",
      "strokeWidth": 1,
    },
    "type": "path",
    "x": 0,
    "y": 0,
  },
]
`;

exports[`golden-master: stacked area chart golden-master: stacked area chart marks count 1`] = `2`;

exports[`golden-master: stacked bar chart golden-master: stacked bar chart axes count 1`] = `42`;

exports[`golden-master: stacked bar chart golden-master: stacked bar chart legends count 1`] = `5`;

exports[`golden-master: stacked bar chart golden-master: stacked bar chart marks 1`] = `
[
  {
    "datum": {
      "category": "A",
      "series": "S1",
      "value": 10,
    },
    "height": 100,
    "style": {
      "cornerRadius": undefined,
      "fill": "#1f77b4",
      "opacity": 1,
      "stroke": undefined,
      "strokeWidth": undefined,
    },
    "type": "rect",
    "width": 111.76470588235294,
    "x": 101.003861003861,
    "y": 220,
  },
  {
    "datum": {
      "category": "B",
      "series": "S1",
      "value": 20,
    },
    "height": 200,
    "style": {
      "cornerRadius": undefined,
      "fill": "#1f77b4",
      "opacity": 1,
      "stroke": undefined,
      "strokeWidth": undefined,
    },
    "type": "rect",
    "width": 111.76470588235294,
    "x": 211.04247104247105,
    "y": 120,
  },
  {
    "datum": {
      "category": "C",
      "series": "S1",
      "value": 30,
    },
    "height": 300,
    "style": {
      "cornerRadius": undefined,
      "fill": "#1f77b4",
      "opacity": 1,
      "stroke": undefined,
      "strokeWidth": undefined,
    },
    "type": "rect",
    "width": 111.76470588235294,
    "x": 321.0810810810811,
    "y": 20,
  },
  {
    "datum": {
      "category": "A",
      "series": "S2",
      "value": 15,
    },
    "height": 150,
    "style": {
      "cornerRadius": undefined,
      "fill": "#ff7f0e",
      "opacity": 1,
      "stroke": undefined,
      "strokeWidth": undefined,
    },
    "type": "rect",
    "width": 111.76470588235294,
    "x": 101.003861003861,
    "y": 70,
  },
  {
    "datum": {
      "category": "B",
      "series": "S2",
      "value": 25,
    },
    "height": 250,
    "style": {
      "cornerRadius": undefined,
      "fill": "#ff7f0e",
      "opacity": 1,
      "stroke": undefined,
      "strokeWidth": undefined,
    },
    "type": "rect",
    "width": 111.76470588235294,
    "x": 211.04247104247105,
    "y": -130,
  },
  {
    "datum": {
      "category": "C",
      "series": "S2",
      "value": 5,
    },
    "height": 50,
    "style": {
      "cornerRadius": undefined,
      "fill": "#ff7f0e",
      "opacity": 1,
      "stroke": undefined,
      "strokeWidth": undefined,
    },
    "type": "rect",
    "width": 111.76470588235294,
    "x": 321.0810810810811,
    "y": -30,
  },
]
`;

exports[`golden-master: stacked bar chart golden-master: stacked bar chart marks count 1`] = `6`;

exports[`golden-master: stock chart golden-master: stock chart axes count 1`] = `40`;

exports[`golden-master: stock chart golden-master: stock chart legends count 1`] = `0`;

exports[`golden-master: stock chart golden-master: stock chart marks 1`] = `
[
  {
    "datum": {
      "close": 105,
      "date": "Mon",
      "high": 110,
      "low": 95,
      "open": 100,
    },
    "height": 262.5,
    "style": {
      "cornerRadius": undefined,
      "fill": "#1f77b4",
      "opacity": 1,
      "stroke": undefined,
      "strokeWidth": undefined,
    },
    "type": "rect",
    "width": 87.49999999999999,
    "x": 98.63892806770099,
    "y": 57.5,
  },
  {
    "datum": {
      "close": 108,
      "date": "Tue",
      "high": 115,
      "low": 100,
      "open": 105,
    },
    "height": 270,
    "style": {
      "cornerRadius": undefined,
      "fill": "#ff7f0e",
      "opacity": 1,
      "stroke": undefined,
      "strokeWidth": undefined,
    },
    "type": "rect",
    "width": 87.49999999999999,
    "x": 185.02820874471087,
    "y": 50,
  },
  {
    "datum": {
      "close": 112,
      "date": "Wed",
      "high": 120,
      "low": 102,
      "open": 108,
    },
    "height": 280,
    "style": {
      "cornerRadius": undefined,
      "fill": "#2ca02c",
      "opacity": 1,
      "stroke": undefined,
      "strokeWidth": undefined,
    },
    "type": "rect",
    "width": 87.49999999999999,
    "x": 271.4174894217207,
    "y": 40,
  },
  {
    "datum": {
      "close": 107,
      "date": "Thu",
      "high": 118,
      "low": 105,
      "open": 112,
    },
    "height": 267.5,
    "style": {
      "cornerRadius": undefined,
      "fill": "#d62728",
      "opacity": 1,
      "stroke": undefined,
      "strokeWidth": undefined,
    },
    "type": "rect",
    "width": 87.49999999999999,
    "x": 357.80677009873057,
    "y": 52.5,
  },
  {
    "datum": {
      "close": 120,
      "date": "Fri",
      "high": 125,
      "low": 103,
      "open": 107,
    },
    "height": 300,
    "style": {
      "cornerRadius": undefined,
      "fill": "#9467bd",
      "opacity": 1,
      "stroke": undefined,
      "strokeWidth": undefined,
    },
    "type": "rect",
    "width": 87.49999999999999,
    "x": 444.19605077574045,
    "y": 20,
  },
]
`;

exports[`golden-master: stock chart golden-master: stock chart marks count 1`] = `5`;

exports[`golden-master: waterfall chart golden-master: waterfall chart axes count 1`] = `44`;

exports[`golden-master: waterfall chart golden-master: waterfall chart legends count 1`] = `11`;

exports[`golden-master: waterfall chart golden-master: waterfall chart marks 1`] = `
[
  {
    "datum": {
      "label": "Revenue",
      "value": 100,
    },
    "height": 214.28571428571428,
    "style": {
      "cornerRadius": undefined,
      "fill": "#1f77b4",
      "opacity": 1,
      "stroke": undefined,
      "strokeWidth": undefined,
    },
    "type": "rect",
    "width": 67.85714285714286,
    "x": 96.69957686882934,
    "y": 20,
  },
  {
    "datum": {
      "label": "COGS",
      "value": -40,
    },
    "height": 85.71428571428572,
    "style": {
      "cornerRadius": undefined,
      "fill": "#ff7f0e",
      "opacity": 1,
      "stroke": undefined,
      "strokeWidth": undefined,
    },
    "type": "rect",
    "width": 67.85714285714286,
    "x": 163.69534555712272,
    "y": 234.28571428571428,
  },
  {
    "datum": {
      "label": "OpEx",
      "value": -30,
    },
    "height": 64.28571428571428,
    "style": {
      "cornerRadius": undefined,
      "fill": "#2ca02c",
      "opacity": 1,
      "stroke": undefined,
      "strokeWidth": undefined,
    },
    "type": "rect",
    "width": 67.85714285714286,
    "x": 230.6911142454161,
    "y": 234.28571428571428,
  },
  {
    "datum": {
      "label": "Tax",
      "value": -10,
    },
    "height": 21.428571428571416,
    "style": {
      "cornerRadius": undefined,
      "fill": "#d62728",
      "opacity": 1,
      "stroke": undefined,
      "strokeWidth": undefined,
    },
    "type": "rect",
    "width": 67.85714285714286,
    "x": 297.68688293370946,
    "y": 234.28571428571428,
  },
  {
    "datum": {
      "label": "Net",
      "value": 20,
    },
    "height": 42.85714285714286,
    "style": {
      "cornerRadius": undefined,
      "fill": "#9467bd",
      "opacity": 1,
      "stroke": undefined,
      "strokeWidth": undefined,
    },
    "type": "rect",
    "width": 67.85714285714286,
    "x": 364.6826516220028,
    "y": 191.42857142857142,
  },
]
`;

exports[`golden-master: waterfall chart golden-master: waterfall chart marks count 1`] = `5`;
